# AFAC2026

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  answer_judge.py  calculation.py  catalog.py  config.py  doc_retriever.py  evidence_extractor.py  index_store.py  llm_client.py  llm_transport.py  pageindex_adapter.py  pipeline.py  preprocess.py  question_parser.py  schemas.py  token_meter.py  tree_retriever.py
agent/domain_profiles/: __init__.py  insurance.py
data_analysis/: dataset_stats.json  print_report.py  report.csv  scan_dataset.py  write_group_markdowns.py
data_analysis/markdown_groups/: financial_contracts.md  financial_reports.md  insurance.md  regulatory.md  research.md
docs/: Task4赛题难点总结.md  Task4金融长文本Agent 的动态记忆压缩与高效问答挑战.md  模型配置.md
docs/finance_agent_gpt5.5thinking/: README.md  finance_agent_data_analysis.md  finance_agent_requirements.md  finance_agent_tech_research_and_api_call_report.md  finance_agent_technical_architecture.md
docs/pageindex_finance_gpt5.5pro/: A榜保险PageIndex系统PLAN.md  A榜保险PageIndex系统开发计划文档.md  A榜保险PageIndex系统架构设计.md  A榜保险PageIndex系统架构设计文档.md  PageIndex中LLM使用结构化索引.md  PageIndex源码解读_面向金融Agent问答赛题.md  PageIndex运用到赛题任务-gpt5.5thinking.md  README-PageIndex.md  金融Agent问答中使用PageIndex_算法开发指南.md
scripts/: build_catalog.py  build_pageindex.py  build_preprocess.py  run_answers.py  validate_outputs.py
tests/: __init__.py
tests/agent/: test_answer_judge.py  test_calculation.py  test_catalog.py  test_config.py  test_doc_retriever.py  test_domain_profiles.py  test_index_store.py  (+10 more)
